samples/_failures_safe/1761503223_b9770b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97f810b8.c: In function ‘main’:
./samples/SAFE/__tmp_97f810b8.c:181:5: error: expected declaration or statement at end of input
  181 |     } else {
      |     ^
./samples/SAFE/__tmp_97f810b8.c:181:5: error: expected declaration or statement at end of input
